setup chat ben staff

--- a/TMD/TMD/Views/Shared/_LayoutStaff.cshtml
+++ b/TMD/TMD/Views/Shared/_LayoutStaff.cshtml
@@ -244,5 +244,6 @@
     {
         <script id="staff-custom-js">(function() { @Html.Raw(customJs) })();</script>
     }
+    <script src="~/js/signalr-client.js"></script>
 </body>
 </html>
